@@ -6,7 +6,7 @@ STAGING_REPOSITORY_ID=$1
 
 echo 'Release to Maven central...'
 
-MAVEN_OPTS="-Duser.name=jenkins -Duser.home=/tmp/jenkins-home" ./mvnw \
+MAVEN_OPTS="-Duser.name=jenkins -Duser.home=/tmp/jenkins-home --add-opens=java.base/java.util=ALL-UNNAMED " ./mvnw \
     -s settings.xml \
     -Pcentral  \
     -DstagingRepositoryId="${STAGING_REPOSITORY_ID}" \
